Canvis CSS, estructura sections i background color

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <nav>
 
-            <a href="#">Datos Personales</a>
-            <a href="#">Experiencia Profesional</a>
-            <a href="#">Estudios</a>
-            <a href="#">Idiomas</a>
-            <a href="#">Contacto</a>
+            <a href="#datospersonales" class="links-header">Datos Personales</a>
+            <a href="#experienciaprofesional" class="links-header">Experiencia Profesional</a>
+            <a href="#estudios" class="links-header">Estudios</a>
+            <a href="#idiomas" class="links-header">Idiomas</a>
+            <a href="#contacto" class="links-header">Contacto</a>
 
         </nav>
 
@@ -28,7 +28,7 @@
 
             <section>
 
-                <h1>Datos Personales</h1>
+                <a id="datospersonales"><h1>Datos Personales</h1></a>
 
                 <img src="./img.png" alt="">
 
@@ -62,7 +62,7 @@
 
             <section>
 
-                <h1>Experiencia Profesional</h1>
+                <a id="experienciaprofesional"><h1>Experiencia Profesional</h1></a>
 
                 <article>
                     
@@ -79,7 +79,7 @@
 
             <section>
 
-                <h1>Estudios</h1>
+                <a id="estudios"><h1>Estudios</h1></a>
 
                 <ul>
 
@@ -94,7 +94,7 @@
 
             <section>
 
-                <h1>Idiomas</h1>
+                <a id="idiomas"><h1>Idiomas</h1></a>
 
                 <ul>
 
@@ -114,10 +114,14 @@
 
     <footer>
 
-        <h1>Contacto</h1>
+        <a id="contacto"><h1>Contacto</h1></a>
 
-        <li><h4>Email: adrian-2002@hotmail.de</h4></li>
-        <li><h4>Numero móvil: 615196170</h4></li>        
+        <ul>
+
+            <li><h4>Email: adrian-2002@hotmail.de</h4></li>
+            <li><h4>Numero móvil: 615196170</h4></li>       
+
+        </ul> 
 
 
     </footer>
