Afegit Inputs a Register, per arribar a la suma de 5 Inputs

--- a/other_pages/Contact/contact.html
+++ b/other_pages/Contact/contact.html
@@ -46,6 +46,8 @@
 
                             <li><p>Email: adrian-2002@hotmail.de</p</li>
                             <li><p>Numero móvil: 615196170</p</li>  
+                            <li><p>Numero móvil familiar: 696010594</p</li>  
+
 
                         </ul>                   
 
