--- a/other_pages/Register/register.html
+++ b/other_pages/Register/register.html
@@ -46,8 +46,18 @@
 
                             <label for="email">Email</label>
                             <input type="email" name="email">
+
                             <label for="password">Password</label>
                             <input type="password" name="password">
+
+                            <label for="name">Name</label>
+                            <input type="text" name="name">
+
+                            <label for="surname">Surname</label>
+                            <input type="text" name="surname">
+
+                            <label for="city">City</label>
+                            <input type="text" name="city">
                             
                             <button><a href="../Login/login.html" class="register-link">Submit</a></button>
 
